- local hacks on FreeBSD version

--- a/newsyslog.conf
+++ b/newsyslog.conf
@@ -1,8 +1,18 @@
-# configuration file for newsyslog
-# $Id: newsyslog.conf,v 1.1 1997/09/26 21:07:07 woods Exp $
 #
-# logfilename           owner.group     mode ngen size time [ZB]
-/var/cron/log		root.root	600  52    100  *     Z
-/var/adm/xferlog	root.ftp	660  52    *    168   Z
-/var/adm/messages	root.other	644  52    *    168   Z
-/var/log/syslog		root.other	666  52    *    168   Z
+# sample configuration file for newsyslog
+#
+# logfilename		[owner.group]	mode	count	kbytes	hours	[ZB]	[/pid_file]
+/var/adm/messages			664	10	*	168	Z
+/var/adm/wtmp				664	10	1000	*	B
+/var/log/auth		root.wheel	640	10	1000	*	Z
+/var/log/cron		root.wheel	640	3	*	24	Z	
+/var/log/daemon				664	4	500	*	Z
+/var/log/debug		root.wheel	640	4	1000	*	Z
+/var/log/kern				664	10	500	*	Z
+/var/log/local				664	10	*	168	Z
+/var/log/lpr				664	5	250	*	Z
+/var/log/mail		root.listserv	660	52	*	168	Z
+/var/log/news		news.news	664	2	*	24	Z
+/var/log/syslog		root.wheel	640	3	500	*	Z
+/var/log/user				664	10	500	*	Z
+/var/log/uucp		uucp.uucp	664	5	*	168	Z
