- a couple of tweaks to the examples.

--- a/newsyslog.conf
+++ b/newsyslog.conf
@@ -11,8 +11,8 @@
 /var/log/kern				664	10	500	*	Z
 /var/log/local				664	10	*	168	Z
 /var/log/lpr				664	5	250	*	Z
-/var/log/mail		root.listserv	660	52	*	168	Z
-/var/log/news		news.news	664	2	*	24	Z
+/var/log/mail		root.staff	660	52	*	168	Z
+#/var/log/news		news.news	664	2	*	24	Z
 /var/log/syslog		root.wheel	640	3	500	*	Z
 /var/log/user				664	10	500	*	Z
-/var/log/uucp		uucp.uucp	664	5	*	168	Z
+/var/log/uucp		uucp.operator	664	5	*	168	Z
