--- a/configure.in
+++ b/configure.in
@@ -7,10 +7,10 @@ dnl Copyright (C) 1997 Planix, Inc. - All rights reserved.
 AC_INIT(newsyslog.c)
 AC_PREREQ(2.12)dnl Required Autoconf version.
 
-AC_REVISION([#ident "@(#)newsyslog:$Name:  $:$Id: configure.in,v 1.2 1997/11/14 06:52:02 woods Exp $"])dnl
+AC_REVISION([#ident "@(#)newsyslog:$Name:  $:$Id: configure.in,v 1.3 1997/11/15 07:05:31 woods Exp $"])dnl
 
 PACKAGE=newsyslog
-VERSION=0.1.90
+VERSION=0.1.91-Pre
 
 AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
 AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
@@ -74,8 +74,9 @@ AC_ARG_WITH(compress,
 	AC_DEFINE(COMPRESS_POSTFIX, ".Z")]
 )dnl
 AC_MSG_RESULT($COMPRESS_PROG)
-AC_PATH_PROG(_PATH_COMPRESS, $COMPRESS_PROG)
-AC_DEFINE_UNQUOTED(_PATH_COMPRESS, "$ac_cv_path_compress")
+AC_SUBST(COMPRESS_PROG, $COMPRESS_PROG)
+AC_PATH_PROG(PATH_COMPRESS, $COMPRESS_PROG)
+AC_DEFINE_UNQUOTED(PATH_COMPRESS, "$PATH_COMPRESS")
 
 AC_MSG_CHECKING(for name of syslogd's pid file)
 AC_ARG_WITH(syslog_pidfile,
