- distribute README.developers too.

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@
 #
 # Copyright (C) 1997 Planix, Inc. - All rights reserved.
 #
-#ident	"@(#)fingerd:$Name:  $:$Id: Makefile.am,v 1.2 1997/11/14 06:52:01 woods Exp $"
+#ident	"@(#)fingerd:$Name:  $:$Id: Makefile.am,v 1.3 1998/03/05 05:27:52 woods Exp $"
 
 AUTOMAKE_OPTIONS = gnu no-dependencies cvs cvs-testbuild dist-tarZ
 MAINT_CHARSET = latin1
@@ -14,7 +14,7 @@ man_MANS = newsyslog.conf.5 newsyslog.8
 
 catman_MANS = newsyslog.conf.cat5 newsyslog.cat8
 
-DIST_OTHER = $(catman_MANS)
+DIST_OTHER = README.developers $(catman_MANS)
 
 PATH_CONFIG = @path_config@
 
