- use EXTRA_DIST (in addition to OTHER_DIST) for things that must be made during 'make dist'. - added ToDo to OTHER_DIST. - added Makefile.BSD to EXTRA_DIST.

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@
 #
 # Copyright (C) 1997 Planix, Inc. - All rights reserved.
 #
-#ident	"@(#)fingerd:$Name:  $:$Id: Makefile.am,v 1.3 1998/03/05 05:27:52 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: Makefile.am,v 1.4 1998/03/15 20:51:32 woods Exp $"
 
 AUTOMAKE_OPTIONS = gnu no-dependencies cvs cvs-testbuild dist-tarZ
 MAINT_CHARSET = latin1
@@ -14,7 +14,11 @@ man_MANS = newsyslog.conf.5 newsyslog.8
 
 catman_MANS = newsyslog.conf.cat5 newsyslog.cat8
 
-DIST_OTHER = README.developers $(catman_MANS)
+# things that exist in the repository
+DIST_OTHER = README.developers ToDo
+
+# things that must be made during 'make dist'
+EXTRA_DIST = $(catman_MANS) Makefile.BSD
 
 PATH_CONFIG = @path_config@
 
