- replace with more complete and compact version that doesn't use tabs so it can be .so'ed into the newsyslog.conf.5 manual page.

--- a/newsyslog.conf
+++ b/newsyslog.conf
@@ -1,18 +1,28 @@
 #
 # sample configuration file for newsyslog
 #
-# logfilename		[owner.group]	mode	count	kbytes	hours	[ZB]	[/pid_file]
-/var/adm/messages			664	10	*	168	Z
-/var/adm/wtmp				664	10	1000	*	B
-/var/log/auth		root.wheel	640	10	1000	*	Z
-/var/log/cron		root.wheel	640	3	*	24	Z	
-/var/log/daemon				664	4	500	*	Z
-/var/log/debug		root.wheel	640	4	1000	*	Z
-/var/log/kern				664	10	500	*	Z
-/var/log/local				664	10	*	168	Z
-/var/log/lpr				664	5	250	*	Z
-/var/log/mail		root.staff	660	52	*	168	Z
-#/var/log/news		news.news	664	2	*	24	Z
-/var/log/syslog		root.wheel	640	3	500	*	Z
-/var/log/user				664	10	500	*	Z
-/var/log/uucp		uucp.operator	664	5	*	168	Z
+# log_filename  [owner.group] mode count kbytes hours [ZB0][/pid_file]
+#               |             |    |     |      |     |    |
+/var/log/aculog uucp.dialer   640  10    *      24    Z0   /dev/null
+/var/log/auth                 640  10    100    *     Z0
+/var/log/authpriv             640  10    100    *     Z0
+/var/log/cron                 640  3     *      24    Z
+/var/log/daemon               644  4     500    *     Z
+/var/log/debug                640  4     1000   *     Z
+/var/log/httpd/access_log     644  5     *      168   Z0   /var/run/httpd.pid
+/var/log/httpd/error_log      644  5     *      168   Z0   /var/run/httpd.pid
+/var/log/kerberos.log         640  10    *      24    Z0   /dev/null
+/var/log/kern                 644  10    500    *     Z0
+/var/log/local                644  10    *      168   Z0
+/var/log/lpd-errs             644  4     100    *     Z0
+/var/log/lpr                  644  5     250    *     Z0
+/var/log/mail   root.staff    640  52    *      168   Z0
+/var/log/messages             644  10    *      168   Z0
+/var/log/news   news.news     644  2     *      24    Z0
+/var/log/smail/logfile        644  5     *      168   Z0   /dev/null
+/var/log/smail/paniclog       644  5     *      168   Z0   /dev/null
+/var/log/syslog               640  3     500    *     Z0
+/var/log/user                 644  10    500    *     Z0
+/var/log/uucp   uucp.operator 644  5     *      168   Z0
+/var/log/wtmp                 644  10    1000   *     BZ0
+/var/log/xferlog              640  10    *      168   Z0
