--- a/newsyslog.conf.5.in
+++ b/newsyslog.conf.5.in
@@ -1,4 +1,4 @@
-.\"ident	"@(#)$Name:  $:$Id: newsyslog.conf.5.in,v 1.4 1998/03/15 21:05:47 woods Exp $"
+.\"ident	"@(#)$Name:  $:$Id: newsyslog.conf.5.in,v 1.5 1998/03/15 22:10:43 woods Exp $"
 .\"
 .\" Copyright 1988, 1989 by the Massachusetts Institute of Technology
 .\" 
@@ -122,7 +122,7 @@ ends in
 should not be compressed even when the
 .Ar Z
 flag is given.  This flag is necessary when managing log files written
-directly to by long-running processes (eg.
+directly to by long-running processes (eg.\ 
 .Xr smail 8 ,
 .Xr httpd 8 ,
 etc.).  This flag also makes it more convenient to browse through the
@@ -141,9 +141,10 @@ field
 is specified for entries without any flags.
 .It Ar path_to_pid_file
 This optional field specifies the file name from which to read the
-associated daemon's process-id.  If this field is present, a SIGHUP is
-sent the process id contained in this file.  This field must start with
-a slash (i.e.\ 
+associated daemon's process-id.  If this field is present, and not
+.Dq Pa /dev/null ,
+a SIGHUP is sent the process id contained in this file.  This field must
+start with a slash (i.e.\ 
 .Dq Pa / )
 in order to be recognized properly.
 .El
