--- a/newsyslog.8.in
+++ b/newsyslog.8.in
@@ -3,7 +3,7 @@
 .\"	from: @(#)newsyslog.8
 .\"	$FreeBSD: newsyslog.8,v 1.9 1997/10/06 07:46:06 charnier Exp $
 .\"
-.\"ident	"@()newsyslog:$Name:  $:$Id: newsyslog.8.in,v 1.3 1998/03/05 03:56:36 woods Exp $"
+.\"ident	"@()newsyslog:$Name:  $:$Id: newsyslog.8.in,v 1.4 1998/03/15 23:52:03 woods Exp $"
 .\"
 .\" Copyright 1988, 1989 by the Massachusetts Institute of Technology
 .\" 
@@ -77,11 +77,22 @@ Instruct newsyslog to use
 instead of
 .Pa @path_config@
 for its configuration file.
-.It Fl v
-Place 
+.It Fl F
+Force
 .Nm
-in verbose mode.  In this mode it will print out each log and its
-reasons for either trimming that log or skipping it.
+to trim log files immediately.  Note that the
+.Fl M
+and
+.Fl m
+options are not ignored thus making it possible to force trimming of
+only interval controlled logs.
+.Pp
+This option can be useful to initialize a freshly installed system with
+initial archive copies to ensure reliable interval calculation based on
+the age of the most recent archive file.  This option can also be useful
+to mark an important system milestone in all logs
+.Nm
+manages.
 .It Fl m
 Cause
 .Nm
@@ -124,6 +135,11 @@ will not be able to send a HUP signal to
 .Xr syslogd 8
 or most other daemons so this option is probably only useful for
 debugging.
+.It Fl v
+Place 
+.Nm
+in verbose mode.  In this mode it will print out each log and its
+reasons for either trimming that log or skipping it.
 .El
 .Sh FILES
 .Bl -tag -width @path_config@ -compact
