--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@
 #
 # Copyright (C) 1997 Planix, Inc. - All rights reserved.
 #
-#ident	"@(#)newsyslog:$Name:  $:$Id: Makefile.am,v 1.4 1998/03/15 20:51:32 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: Makefile.am,v 1.5 1998/03/16 01:28:22 woods Exp $"
 
 AUTOMAKE_OPTIONS = gnu no-dependencies cvs cvs-testbuild dist-tarZ
 MAINT_CHARSET = latin1
@@ -13,12 +13,13 @@ bin_PROGRAMS = newsyslog
 man_MANS = newsyslog.conf.5 newsyslog.8
 
 catman_MANS = newsyslog.conf.cat5 newsyslog.cat8
+soelim_MANS = newsyslog.conf.cat5so
 
 # things that exist in the repository
 DIST_OTHER = README.developers ToDo
 
 # things that must be made during 'make dist'
-EXTRA_DIST = $(catman_MANS) Makefile.BSD
+EXTRA_DIST = $(soelim_MANS) $(catman_MANS) Makefile.BSD
 
 PATH_CONFIG = @path_config@
 
@@ -29,11 +30,15 @@ PATH_SYSLOG_PIDFILE = @syslog_pidfile@
 ##
 
 NROFF = nroff
+SOELIM = soelim
 
-SUFFIXES = .5 .8 .cat8 .cat5
+SUFFIXES = .5 .8 .5so .8so .cat8 .cat5
 
 .8.cat8 .5.cat5:
-	$(NROFF) -mandoc $(srcdir)/$? > $@
+	$(NROFF) -mandoc $(srcdir)/$< > $@
+
+.5so.5 .8so.8:
+	$(SOELIM) $< > $@
 
 #
 # hard-coded dependencies
@@ -42,6 +47,8 @@ SUFFIXES = .5 .8 .cat8 .cat5
 $(PROGRAMS): Makefile
 
 $(man_MANS): config.status
+
+newsyslog.conf.5: newsyslog.conf newsyslog.conf.5so
 
 newsyslog.o: config.h
 version.o: config.h
