- safety fixes for the default rules.

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@
 #
 # Copyright (C) 1997 Planix, Inc. - All rights reserved.
 #
-#ident	"@(#)newsyslog:$Name:  $:$Id: Makefile.am,v 1.7 1998/03/16 02:30:45 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: Makefile.am,v 1.8 1998/03/16 02:36:25 woods Exp $"
 
 AUTOMAKE_OPTIONS = gnu no-dependencies cvs cvs-testbuild dist-tarZ
 MAINT_CHARSET = latin1
@@ -37,10 +37,12 @@ SOELIM = soelim
 SUFFIXES = .5 .8 .5so .8so .cat8 .cat5
 
 .8.cat8 .5.cat5:
-	$(NROFF) -mandoc $(srcdir)/$< > $@
+	@rm -f $@
+	$(NROFF) -mandoc $(srcdir)/$< > $@ || rm $@
 
 .5so.5 .8so.8:
-	$(SOELIM) $< > $@
+	@rm -f $@
+	$(SOELIM) $< > $@ || rm $@
 
 #
 # hard-coded dependencies
@@ -53,6 +55,7 @@ $(man_MANS): config.status
 newsyslog.conf.5: newsyslog.conf newsyslog.conf.5so
 
 Makefile.BSD-dist: Makefile.BSD
+	@rm -f $@
 	cp $? $@
 
 newsyslog.o: config.h
