--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@
 #
 # Copyright (C) 1997 Planix, Inc. - All rights reserved.
 #
-#ident	"@(#)newsyslog:$Name:  $:$Id: Makefile.am,v 1.8 1998/03/16 02:36:25 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: Makefile.am,v 1.9 1998/03/16 03:03:17 woods Exp $"
 
 AUTOMAKE_OPTIONS = gnu no-dependencies cvs cvs-testbuild dist-tarZ
 MAINT_CHARSET = latin1
@@ -13,7 +13,7 @@ bin_PROGRAMS = newsyslog
 man_MANS = newsyslog.conf.5 newsyslog.8
 
 catman_MANS = newsyslog.conf.cat5 newsyslog.cat8
-soelim_MANS = newsyslog.conf.5so
+soelim_MANS = newsyslog.conf.5so newsyslog.8so
 
 # things that exist in the repository
 DIST_OTHER = README.developers ToDo
@@ -38,11 +38,11 @@ SUFFIXES = .5 .8 .5so .8so .cat8 .cat5
 
 .8.cat8 .5.cat5:
 	@rm -f $@
-	$(NROFF) -mandoc $(srcdir)/$< > $@ || rm $@
+	$(NROFF) -mandoc $(srcdir)/$< > $@ || (rm -f $@; exit 1)
 
 .5so.5 .8so.8:
 	@rm -f $@
-	$(SOELIM) $< > $@ || rm $@
+	$(SOELIM) $< > $@ || (rm -f $@; exit 1)
 
 #
 # hard-coded dependencies
@@ -53,6 +53,9 @@ $(PROGRAMS): Makefile
 $(man_MANS): config.status
 
 newsyslog.conf.5: newsyslog.conf newsyslog.conf.5so
+
+# (no .so's in here yet....)
+newsyslog.8: newsyslog.8so
 
 Makefile.BSD-dist: Makefile.BSD
 	@rm -f $@
