--- a/configure.in
+++ b/configure.in
@@ -7,7 +7,7 @@ dnl Copyright (C) 1997 Planix, Inc. - All rights reserved.
 AC_INIT(newsyslog.c)
 AC_PREREQ(2.12)dnl Required Autoconf version.
 
-AC_REVISION([#ident "@(#)newsyslog:$Name:  $:$Id: configure.in,v 1.13 1998/03/16 01:36:52 woods Exp $"])dnl
+AC_REVISION([#ident "@(#)newsyslog:$Name:  $:$Id: configure.in,v 1.14 1998/03/16 03:03:47 woods Exp $"])dnl
 
 PACKAGE=newsyslog
 VERSION=1.0.92
@@ -125,4 +125,4 @@ AC_SUBST(path_config)
 AC_DEFINE_UNQUOTED(PATH_CONFIG, "$path_config")
 AC_MSG_RESULT($path_config)
 
-AC_OUTPUT([Makefile Makefile.BSD newsyslog.conf.5so newsyslog.8])
+AC_OUTPUT([Makefile Makefile.BSD newsyslog.conf.5so newsyslog.8so])
