--- a/newsyslog.8so.in
+++ b/newsyslog.8so.in
@@ -1,9 +1,9 @@
 .\" This file contains changes from the Open Software Foundation.
 .\"
 .\"	from: @(#)newsyslog.8
-.\"	$FreeBSD: newsyslog.8,v 1.9 1997/10/06 07:46:06 charnier Exp $
+.\"	FreeBSD: newsyslog.8,v 1.9 1997/10/06 07:46:06 charnier Exp
 .\"
-.\"ident	"@()newsyslog:$Name:  $:$Id: newsyslog.8so.in,v 1.2 1998/06/24 15:32:43 woods Exp $"
+.\"ident	"@(#)newsyslog:$Name:  $:$Id: newsyslog.8so.in,v 1.3 1999/01/17 06:34:17 woods Exp $"
 .\"
 .\" Copyright 1988, 1989 by the Massachusetts Institute of Technology
 .\" 
@@ -19,7 +19,7 @@
 .\" the suitability of this software for any purpose.  It is
 .\" provided "as is" without express or implied warranty.
 .\"
-.Dd November 12, 1997
+.Dd January 17, 1999
 .Dt NEWSYSLOG 8
 .Os
 .Sh NAME
@@ -30,6 +30,7 @@
 .Op Fl m Li | Fl M
 .Op Fl rnv
 .Op Fl f Ar config_file
+.Op Fl p Ar syslogd_pidfile
 .Sh DESCRIPTION
 .Nm Newsyslog
 is a program that should be scheduled to run periodically by
@@ -49,8 +50,9 @@ compressed to save space.  After all file operations are done
 .Nm
 notifies the
 .Nm syslogd
-daemon, and optionally other log-file specific daemons, by sending a
-SIGHUP to the daemon process(es).
+daemon, or optionally some log-file specific daemon, by sending a
+.Dv SIGHUP
+to the daemon process.
 .Pp
 A log can be archived because of two reasons.  The log file can have
 grown bigger than a preset size in kilobytes, or a preset number of
@@ -70,7 +72,7 @@ at.  By default, this configuration file is
 .Pa  .
 .Sh OPTIONS
 The following options can be used with newsyslog:
-.Bl -tag -width indent
+.Bl -tag -width 12345678
 .It Fl f Ar config_file
 Instruct newsyslog to use 
 .Ar config_file
@@ -129,6 +131,13 @@ the actions of
 were it to be run without the
 .Fl n
 flag (and assuming of course the script were run by root).
+.It Fl p Ar syslogd_pidfile
+Instruct newsyslog to use 
+.Ar syslogd_pidfile
+instead of
+.Pa @syslogd_pidfile@
+as the PID file for
+.Nm syslogd .
 .It Fl r
 Remove the restriction that
 .Nm
@@ -137,7 +146,7 @@ must be running as root.  Of course,
 will not be able to send a HUP signal to
 .Nm syslogd
 or most other daemons so this option is probably only useful for
-debugging.
+debugging unless an alternate configuration file is specified.
 .It Fl v
 Place 
 .Nm
@@ -145,11 +154,11 @@ in verbose mode.  In this mode it will print out each log and its
 reasons for either trimming that log or skipping it.
 .El
 .Sh FILES
-.Bl -tag -width @path_config@ -compact
+.Bl -tag -width /usr/local/etc/newsyslog.conf -compact
 .It Pa @path_config@
 .Nm
 configuration file.
-.It Pa @syslog_pidfile@
+.It Pa @syslogd_pidfile@
 The default location of the PID for
 .Nm syslogd .
 .El
@@ -198,7 +207,9 @@ creep around the clock.
 Sends SIGHUP to the associated daemon process for every log file
 trimmed.  This is done to ensure that it's safe to compress the file
 after it has hopefully been closed but in theory should be optimized to
-only notify daemon(s) once.  This is normally harmless for
+only notify daemon(s) once (and of course to batch all the compression
+commands to the end of the process).  This behaviour is normally
+harmless for
 .Nm syslogd
 and multiple signals can be avoided for other daemons by ensuring their
 PID files are only listed once and that the
