--- a/newsyslog.8so.in
+++ b/newsyslog.8so.in
@@ -1,9 +1,11 @@
 .\" This file contains changes from the Open Software Foundation.
 .\"
+.\" This file contains changes from Greg A. Woods; Planix, Inc.
+.\"
 .\"	from: @(#)newsyslog.8
 .\"	FreeBSD: newsyslog.8,v 1.9 1997/10/06 07:46:06 charnier Exp
 .\"
-.\"ident	"@(#)newsyslog:$Name:  $:$Id: newsyslog.8so.in,v 1.3 1999/01/17 06:34:17 woods Exp $"
+.\"ident	"@(#)newsyslog:$Name:  $:$Id: newsyslog.8so.in,v 1.4 1999/08/24 23:06:59 woods Exp $"
 .\"
 .\" Copyright 1988, 1989 by the Massachusetts Institute of Technology
 .\" 
