--- a/configure.in
+++ b/configure.in
@@ -2,12 +2,13 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-dnl Copyright (C) 1997 Planix, Inc. - All rights reserved.
+dnl This file:  Copyright (C) 1997,1998,1999 Planix, Inc.
+dnl             see COPYING for details
 
 AC_INIT(newsyslog.c)
 AC_PREREQ(2.12)dnl Required Autoconf version.
 
-AC_REVISION([#ident "@(#)newsyslog:$Name:  $:$Id: configure.in,v 1.21 1999/02/24 20:07:16 woods Exp $"])dnl
+AC_REVISION([#ident "@(#)newsyslog:$Name:  $:$Id: configure.in,v 1.22 1999/08/25 00:58:53 woods Exp $"])dnl
 
 PACKAGE=newsyslog
 VERSION=1.0.96-Preview
@@ -77,13 +78,15 @@ AC_MSG_CHECKING(for name of archive compression program)
 AC_ARG_WITH(gzip,
 	[  --with-gzip             use GNU Zip instead of compress],
 	[COMPRESS_PROG=gzip
-	AC_DEFINE(COMPRESS_POSTFIX, ".gz")],
+	COMPRESS_SUFFIX=".gz"],
 	[COMPRESS_PROG=compress
-	AC_DEFINE(COMPRESS_POSTFIX, ".Z")]
+	COMPRESS_SUFFIX=".Z"]
 )dnl
-AC_MSG_RESULT($COMPRESS_PROG)
-AC_SUBST(COMPRESS_PROG, $COMPRESS_PROG)
+AC_MSG_RESULT($COMPRESS_PROG with $COMPRESS_SUFFIX)
+AC_SUBST(COMPRESS_SUFFIX)
+AC_DEFINE_UNQUOTED(COMPRESS_SUFFIX, "$COMPRESS_SUFFIX")
 AC_PATH_PROG(PATH_COMPRESS, $COMPRESS_PROG)
+AC_SUBST(PATH_COMPRESS)
 AC_DEFINE_UNQUOTED(PATH_COMPRESS, "$PATH_COMPRESS")
 
 AC_MSG_CHECKING(for name of syslogd's pid file)
