--- a/Makefile.BSD.in
+++ b/Makefile.BSD.in
@@ -1,20 +1,15 @@
 #
 #	Makefile.BSD - input for pmake
 #
-# Copyright (C) 1997 Planix, Inc. - All rights reserved.
+# This file Copyright (C) 1998,1999 Planix, Inc. -- see COPYING for details.
 #
-#ident	"@(#)newsyslog:$Name:  $:$Id: Makefile.BSD.in,v 1.3 1999/01/17 06:49:02 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: Makefile.BSD.in,v 1.4 1999/08/25 01:21:43 woods Exp $"
 
-# adjust these as desired:
-CPPFLAGS+= -DPATH_CONFIG=\"/etc/newsyslog.conf\"
-CPPFLAGS+= -DPATH_SYSLOGD_PIDFILE=\"/var/run/syslog.pid\"
-CPPFLAGS+= -DPATH_COMPRESS=\"/usr/bin/gzip\"
-CPPFLAGS+= -DCOMPRESS_POSTFIX=\".gz\"
 
-BINDIR?= /usr/bin
-BINOWN= root
-
-# You shouldn't have to change anything below here.
+CPPFLAGS+= -DPATH_COMPRESS=\"@PATH_COMPRESS@\"
+CPPFLAGS+= -DCOMPRESS_SUFFIX=\"@COMPRESS_SUFFIX@\"
+CPPFLAGS+= -DPATH_CONFIG=\"@path_config@\"
+CPPFLAGS+= -DPATH_SYSLOGD_PIDFILE=\"@syslogd_pidfile@\"
 
 CPPFLAGS+= -DRETSIGTYPE=void
 CPPFLAGS+= -DSTDC_HEADERS
@@ -31,6 +26,9 @@ CPPFLAGS+= -DHAVE_UNISTD_H
 
 CPPFLAGS+= -DPACKAGE=\"@PACKAGE@\"
 CPPFLAGS+= -DVERSION=\"@VERSION@\"
+
+BINDIR?= @bindir@
+BINOWN= root
 
 PROG= newsyslog
 MAN= newsyslog.conf.5 newsyslog.8
