--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@
 #
 # Copyright (C) 1997 Planix, Inc. - All rights reserved.
 #
-#ident	"@(#)newsyslog:$Name:  $:$Id: Makefile.am,v 1.10 1999/01/17 06:31:08 woods Exp $"
+#ident	"@(#)newsyslog:$Name:  $:$Id: Makefile.am,v 1.11 2000/04/04 02:51:48 woods Exp $"
 
 AUTOMAKE_OPTIONS = gnu no-dependencies cvs cvs-testbuild dist-tarZ
 MAINT_CHARSET = latin1
@@ -45,7 +45,7 @@ SUFFIXES = .5 .8 .5so .8so .cat8 .cat5
 
 .5so.5 .8so.8:
 	@rm -f $@
-	$(SOELIM) $< > $@ || (rm -f $@; exit 1)
+	$(SOELIM) $(srcdir)/$< > $@ || (rm -f $@; exit 1)
 
 CLEANFILES = $(catman_MANS) $(man_MANS) 
 
