--- a/newsyslog.conf
+++ b/newsyslog.conf
@@ -16,13 +16,13 @@
 /var/log/local                644  10    *    168 Z0
 /var/log/lpd-errs             644  4     100  *   Z0
 /var/log/lpr                  644  5     250  *   Z0
-/var/log/mail   root.staff    640  52    *    168 Z0
+/var/log/mail   root:staff    640  52    *    168 Z0
 /var/log/messages             644  10    *    168 Z0
-/var/log/news   news.news     644  2     *    24  Z0
+/var/log/news   news:news     644  2     *    24  Z0
 /var/log/smail/logfile        644  5     *    168 Z0   /dev/null
 /var/log/smail/paniclog       644  5     *    168 Z0   /dev/null
 /var/log/syslog               640  3     500  *   Z0
 /var/log/user                 644  10    500  *   Z0
-/var/log/uucp   uucp.operator 644  5     *    168 Z0
+/var/log/uucp   uucp:operator 644  5     *    168 Z0
 /var/log/wtmp                 644  10    1000 *   BZ0
 /var/log/xferlog              640  10    *    168 Z0
